fix empty scrollbars in chromium

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -136,7 +136,7 @@ footer {
 }
 
 .highlight {
-	overflow-x: scroll;
+	overflow-x: auto;
 }
 
 @import "bootstrap5-neon-glow";
